@@ -1,3 +1,9 @@
+2011-01-12  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/command/main.py:
+	  Add an option to only count open things; for scripts graphing
+	  my urgency tasks.
+
 2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/command/main.py:
